Fix display on mobile

--- a/src/style.styl
+++ b/src/style.styl
@@ -3,6 +3,7 @@ html, body
 	margin 0
 	width 100%
 	min-height 100%
+	position relative
 	font-family 'Montserrat'
 	a
 		text-decoration none
@@ -63,9 +64,9 @@ html, body
 	margin 0
 	padding 42px
 	box-sizing border-box
-	height 100vh
 	position relative
 	overflow hidden
+	min-height 100vh
 	&:after
 		height 230px
 		width 200%
@@ -153,11 +154,21 @@ html, body
 			height auto
 			margin 10px 0
 			font-size 1.3em
+	.header
+		padding 25px
 	.headline
 		width 100%
+		margin 0 auto
+		max-width 100%
 	.tooltip
 		display none
 @media screen and (max-width: 670px)
+	.header
+		padding 0
+		min-height 75vh
 	.headline
-		font-size 2.5em
+		font-size 3.5em
+		text-align center
+	.presets
+		grid-template 1fr / 1fr
 
